# tiny-raycaster

./:  raytrace  .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  format.sh  framebuffer.cpp  main.cpp  player.cpp  rgba.h  textures.cpp  tiny-raytracer.code-workspace
src/: dimension2D.h  direction.h  framebuffer.cpp  framebuffer.h  main.cpp  map.cpp  map.h  player.cpp  player.h  point2D.h  raycaster.cpp  raycaster.h  rgba.h  sprite.cpp  sprite.h  textures.cpp  textures.h  utils.cpp  utils.h
